--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -1,22 +1,28 @@
-name: Update Submodule
+# when push event  happen to branch master , i want to update submodule that is inside other repo (https://github.com/keoKAY/spring-boot-gradle-swagger)
 
-on:
+name: Update submodule on swagger repo 
+on: 
   push:
     branches:
       - master
 
 jobs:
-  update-submodule:
-    runs-on: ubuntu-latest
+    update-repo2: 
+      runs-on:  ubnutu-latest
     
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        
-      - name: Update submodule
-        run: |
-          git submodule init
-          git submodule update --remote
-          git add configurations
-          git commit -m "Update submodule"
-          git push
+      steps:
+        - name: Checkout first repo 
+          uses: actions/checkout@v2
+          with:
+            repository: keoKAY/configuration_experiment
+            token: ${{ secrets.GITHUB_TOKEN }}
+            ref: ${{ github.ref }}
+        - name: Update repo2 submodule
+          run: |
+            git submodule foreach 'git checkout main && git pull origin main'
+            git add .
+            git commit -m "Update repo2 submodule"
+            git push
+
+      
+      
