--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -1,11 +1,9 @@
 # when push event  happen to branch master , i want to update submodule that is inside other repo (https://github.com/keoKAY/spring-boot-gradle-swagger)
-
 name: Update submodule on swagger repo 
 on: 
   push:
     branches:
       - master
-
 jobs:
     update-repo2: 
       runs-on:  ubnutu-latest
@@ -14,11 +12,9 @@ jobs:
         - name: Checkout first repo 
           uses: actions/checkout@v2
         - name: Update repo2 submodule
-          run: |
-            git submodule foreach 'git checkout master && git pull origin master'
-            git add .
-            git commit -m "Update repo2 submodule"
-            git push
+          run: 
+            git submodule update --update --merge
+            git push origin master
 
       
       
