--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -1,20 +1,21 @@
 # when push event  happen to branch master , i want to update submodule that is inside other repo (https://github.com/keoKAY/spring-boot-gradle-swagger)
-name: Update submodule on swagger repo 
-on: 
+name: Update submodule on swagger repo
+on:
   push:
     branches:
       - master
 jobs:
-    update-repo2: 
-      runs-on:  ubnutu-latest
-    
-      steps:
-        - name: Checkout first repo 
-          uses: actions/checkout@v2
-        - name: Update repo2 submodule
-          run: |
-            git submodule update --update --merge
-            git push origin master
+  update-repo2:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout first repo
+        uses: actions/checkout@v2
+      - name: Update repo2 submodule
+        run: |
+          git submodule update --remote --merge
+          git push origin master
+
 
       
       
