--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -12,8 +12,13 @@ jobs:
       - name: Checkout first repo
         uses: actions/checkout@v2
       - name: Update repo2 submodule
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git submodule update --remote --merge
+          git config --global user.name "keoKAY"
+          git config --global user.email "keokay888@gmail.com"
+          git commit -am "update submodule"
           git push origin master
 
 
