--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -18,10 +18,12 @@ jobs:
           git submodule update --remote --merge
           git config --global user.name "Your Name"
           git config --global user.email "your-email@example.com"
+          git add .
           if [[ `git status --porcelain` ]]; then
             git commit -am "Update submodule"
             git push origin master
           fi
+
 
 
       
