--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -16,8 +16,8 @@ jobs:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git submodule update --remote --merge
-          git config --global user.name "Your Name"
-          git config --global user.email "your-email@example.com"
+          git config --global user.name "keoKAY"
+          git config --global user.email "keokay888@gmail.com"
           git add .
           if [[ `git status --porcelain` ]]; then
             git commit -am "Update submodule"
